web/css/layers.css
.layer-modal .ui-dialog-content,
.layer-modal .ui-dialog-titlebar,
.layer-modal .ui-widget-content,
.layer-modal .ui-widget-header {
  background: none;
  border: 0;
}

.layer-modal-dialog,
.layer-modal-dialog.ui-dialog {
  background: rgb(220, 220, 220);
  z-index: 10200;
}

.layer-modal-content div,
.layer-modal-content h1,
.layer-modal-content h2,
.layer-modal-content h3,
.layer-modal-content h4,
.layer-modal-content p,
.layer-modal-content span {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  color: #383838;
}

.no-titlebar .ui-dialog-titlebar {
  display: none;
}

/* Tile layout */
.layer-modal-dialog .layer-modal {
  padding-left: 10px;
  padding-right: 0;
  padding-top: 0;
  overflow: hidden;
}

.layer-modal-content {
  overflow: auto;
  position: relative;
  padding-top: 3px;
}

.stamp {
  cursor: pointer;
  position: absolute;
}

.layer-categories {
  height: 100%;
}

.layer-category {
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0.75);
  width: 310px;
  height: 230px;
  overflow: hidden;
  margin-bottom: 10px;
}

.category-background-cover {
  min-height: 230px;
  background: rgba(0, 0, 0, 0.4);
}

.layer-category h3 {
  font-size: 20px;
  line-height: 20px;
}

.layer-category h3 .layer-category-name {
  display: block;
  width: 100%;
  line-height: 20px;
  padding: 10px;
  color: #fff;
  background: rgba(51, 51, 51, 0.6);
}

.layer-category h3 .layer-category-name:hover {
  background: rgba(255, 255, 255, 0.6);
}

.layer-category .layer-category-item {
  list-style: none;
}

.layer-category .layer-category-item .layer-category-name {
  display: block;
  padding: 7px 10px;
  width: 100%;
  color: #fff;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -o-box-sizing: border-box;
}

.layer-category .layer-category-item .layer-category-name:hover {
  background: rgba(255, 255, 255, 0.6);
}

/* Categories view */
.layer-modal-content .categories-nav {
  margin-right: 13px;
}

.layer-modal-content .categories-nav .nav-item {
  height: 31px;
  line-height: 35px;
  margin: 0 12px 0 0;
  color: #383838;
  background: #fff;
}

.layer-modal-content .categories-nav .active {
  background: #00457b;
  color: #fff;
}

.layer-modal-content .categories-nav .nav-link {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  font-weight: 300;
  text-transform: capitalize;
  border: 0;
  background: 0;
  height: 30px;
  line-height: 30px;
  padding: 1px 15px;
  vertical-align: middle;
  float: left;
}

.button-input-scientific {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/* Measurement accordion view */
.layer-modal-content .category-breadcrumb {
  height: 30px;
  line-height: 30px;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 16px;
  color: #000;
}

.layer-modal-content .category-breadcrumb a,
.layer-modal-content .category-breadcrumb a:link,
.layer-modal-content .category-breadcrumb a:visited {
  color: #00f;
}

.layers-all {
  height: 100%;
  margin-top: -5px;
}

.layers-all .layers-all-layer {
  margin-top: 5px;
  padding: 0 0 0.5em 0.7em;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -o-box-sizing: border-box;
  box-sizing: border-box;
  border: 0;
  position: relative;
  background: rgba(0, 0, 0, 0.85);
  padding-left: 1.2em;
  line-height: 0;
}

.layers-all .layers-all-layer .layers-all-layer-icon {
  position: absolute;
  top: 50%;
  left: auto;
  right: 1.2em;
}

.layer-picker-list-case .source-metadata h3 {
  font-size: 14px;
  line-height: 18px;
  margin: 0 0 6px;
}

.layers-all-header > h3,
.measurement-row-header > h3 {
  color: #ddd;
  font-size: 20px;
  line-height: 100%;
  position: relative;
  display: block;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

.layers-all .layers-all-layer h5 {
  color: #888;
  font-size: 12px;
  line-height: 100%;
  font-weight: 400;
  margin-top: 3px;
  margin-right: 50px;
  font-style: italic;
}

.layer-description,
.source-metadata {
  padding-top: 11px;
}

.layers-all .layers-all-layer .source-metadata {
  margin-top: 10px;
  border-top-width: 1px;
  color: #ddd;
  padding-right: 1.2em;
}

.layer-date-wrap {
  background-color: #333;
  margin-right: 10px;
  margin-top: 10px;
  padding: 10px;
}

.layer-date-wrap .layer-date-ranges {
  padding-left: 0;
}

.layer-date-wrap .layer-date-ranges .list-group-item {
  border: 0;
  padding: 0;
  background: none;
  list-style-type: disc;
  display: list-item;
  margin: 2px 0 6px 20px;
  color: #bbb;
}

.layer-date-range .layer-date-ranges-button,
.layer-date-range .layer-date-ranges-button:not([href]):not([tabindex]) {
  color: #7bf;
  cursor: pointer;
}

.layer-date-range .layer-date-ranges-button:hover,
.layer-date-range .layer-date-ranges-button:not([href]):not([tabindex]):hover {
  color: #9df;
}
.layer-info-modal .layer-metadata {
  padding-right: 10px;
}

.layer-description .layer-title,
.layer-modal-content .source-metadata h1,
.layer-modal-content .source-metadata h2,
.layer-modal-content .source-metadata h3,
.layer-modal-content .source-metadata h4,
.layer-modal-content .source-metadata h5,
.layer-modal-content .source-metadata h6,
.layer-description .layer-metadata h1,
.layer-description .layer-metadata h2,
.layer-description .layer-metadata h3,
.layer-description .layer-metadata h4,
.layer-description .layer-metadata h5,
.layer-description .layer-metadata h6 {
  color: #ddd;
  font-weight: 700;
}

.layer-description .layer-title,
.layer-modal .source-metadata h3 {
  display: block;
  font-size: 14px;
  line-height: 18px;
  margin: 16px 0 6px;
  font-family: 'Open Sans', sans-serif;
  margin-top: 4px;
}

.layer-description .layer-metadata h3,
.layer-description .layer-metadata h4 {
  margin-bottom: 5px;
}
/* ... */

